# fake-ingress

./: .gitignore  .jujuignore  charmcraft.yaml  dispatch  pyproject.toml  requirements.txt
src/: charm.py
src/fake_ingress/: __init__.py  charm.py
tests/: test_smoke.py
