[tool.poetry]
name = "fake-ingress"
version = "1.0.0"
description = ""
authors = ["Dima Tisnek <dimaqq@gmail.com>"]
license = "MIT"
packages = [
  {include="fake_ingress", from="src"},
  {include="charms", from="lib"},
]

[tool.poetry.dependencies]
python = "^3.11"
ops = "^2.14.1"


[tool.poetry.group.dev.dependencies]
ops-scenario = {git = "https://github.com/canonical/ops-scenario.git", rev = "7.0"}
pytest = "^8.2.2"
pytest-xdist = "^3.6.1"
pydantic = "^2.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

[tool.ruff]
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = ["D203", "D204", "D213", "D215", "D400", "D404", "D406", "D407", "D408", "D409", "D413"]
lint.ignore = ["E501", "D107"]
extend-exclude = ["__pycache__", "*.egg_info"]
[tool.ruff.lint.per-file-ignores]
"src/*" = ["D100", "D102"]
"tests/*" = ["D100", "D101", "D102", "D103", "D104"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src/**.py"]
